--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -19,8 +19,8 @@ B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
 
 # ■=bin/i18n.sh
 # ◆=load_lang_files
-AeQi7H=查找可用语言...
-DzUa6j=找到语言: $lang_name ($lang_file)
+Bpunoh=Searching for available languages...
+BgtDY4=Languages found: {} ({})
 # ◆=resolve_lang_files
 BcI858=模式参数错误 {0}
 Aw82xn={0} 语言文件已存在
@@ -154,8 +154,8 @@ AOGJnE=Size
 DnoT0H=Average
 Dj_fn5=Waiting for file creation...
 CxdIB-=Elapsed Time
-BwEPPV=Download complete! File size
-AN6lkx=Download failed
+C3TQx_=[{}] Download complete! File size: {}
+DJ9mym=[{}] Download failed
 # ◆=install_py_standalone
 Cr3-oJ=Downloading Python {} standalone...
 DnuwZu=Installing Python to {}...
@@ -173,11 +173,11 @@ AoE5L8=Skipping virtual environment creation
 DC8V8Z=Virtual environment created successfully
 DqRJ9Y=Failed to create virtual environment
 # ◆=upgrade_pip
-CwLYOz=[INFO] pip upgrade success
-B2bNpx=[ERROR] pip upgrade failure
+AzVHW7=[{}] pip upgrade success
+ATmu4Z=[{}] pip upgrade failure
 # ◆=install_packages
-BYm_0S=[INFO] {} install success
-D9pnHg=[ERROR] {} install failure
+DPVi8z=[{}] {} install success
+CvnKeR=[{}] {} install failure
 # ◆=show_pip_mirrors
 C6JrUi=Index
 B5VRns=Mirror Name
@@ -194,7 +194,7 @@ Dz9vrd=Configuration canceled. Keeping current settings
 B4r_eA=Pip has been configured to use the new mirror
 AoQOEG=Mirror
 Bovsx6=Trusted Host
-BzTGZo=[ERROR] Invalid input! Please enter a number between 0 and {}.
+CIsYrg=[{}] Invalid input! Please enter a number between 0 and {}
 # ◆=create_py_venv
 DLX7Eq=Testing global pip mirror speeds...
 # ◆=main
@@ -202,8 +202,8 @@ DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 
 # ■=python/cmd_handler.py
 # ◆=cmd_exec
-Cswzs3=[ERROR] Command execution timeout: {}
-CWE0RS=[ERROR] Command execution error: {}
+DLzynX=[{}] Command execution timeout: {}
+Ai3oQ8=[{}] Command execution error: {}
 # ◆=cmd_ex_be
 D69JIa=Executing
 # ◆=monitor_progress
@@ -225,16 +225,16 @@ DE4sbC=Installation of {} completed
 # ◆=run_command
 DWA16R=Failed to execute command: {}
 # ◆=config_sshd
-BFAuER=[Error]: SSH configuration file {} does not exist
+D6wN7B=SSH configuration file {} does not exist
 A7WXKO=SSH is running (current port: {}). Do you want to reconfigure it?
 DzCitM=Enter new SSH port (current: {}):
 DZskNc=Keep current port: {}
-CPPvBn=✓ SSH port set to: {}
-ARXwDM=✗ Failed to set SSH port
+CuaNJT=[{}] SSH port set to: {}
+DrhGIB=[{}] Failed to set SSH port
 A2bCmM=\nOperation cancelled
 DfSYhJ=Allow root login via SSH?:
-CCxIZL=✓ Root login allowed
-BjKmh3=✓ Root login disabled
+DWnXBt=[{}] Root login allowed
+CCVEpj=[{}] Root login disabled
 
 # ■=python/file_util.py
 # ◆=copy_file
@@ -255,8 +255,8 @@ BT_Y36=File restored
 BJsNKb=source file updated: {}
 DNbAuh=Write failed
 # ◆=get_code_files
-DXNBr6=[Warning]: File does not exist
-Dpwver=[Error]: No shell script files found
+AEmaC0=[{}]: Code file does not exist
+A57dQK=[{}]: No code files found
 
 # ■=python/i18n.py
 # ◆=resolve_lang_files
@@ -328,13 +328,9 @@ B657zX=User chose not to modify the network configuration
 
 # ■=python/system.py
 # ◆=confirm_action
-CPcmGT=操作已取消
-Bw0U--=输入错误，请输入 Y 或 N
-B8V-HW=输入处理出错: {}
-# ◆=install_packages
-CDudks=安装所需 Python 包...
-Cil2nd={package} 安装成功
-CiTxoG={package} 安装失败
+BRLnrE=Operation cancelled
+BuJv_n=Invalid input. Please enter Y or N
+CeZZbb=Input processing error: {}
 
 # ■=python/test_lang.py
 # ◆=show_help_info
