--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -19,8 +19,8 @@ B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
 
 # ■=bin/i18n.sh
 # ◆=load_lang_files
-AeQi7H=查找可用语言...
-DzUa6j=找到语言: $lang_name ($lang_file)
+Bpunoh=查找可用语言...
+BgtDY4=找到语言: {} ({})
 # ◆=resolve_lang_files
 BcI858=模式参数错误 {0}
 Aw82xn={0} 语言文件已存在
@@ -154,8 +154,8 @@ AOGJnE=大小
 DnoT0H=平均
 Dj_fn5=等待文件创建...
 CxdIB-=运行时间
-BwEPPV=下载完成! 文件大小
-AN6lkx=下载失败
+C3TQx_=[{}] 下载完成! 文件大小: {}
+DJ9mym=[{}] 下载失败
 # ◆=install_py_standalone
 Cr3-oJ=下载 Python {} standalone...
 DnuwZu=安装 Python 到 {}...
@@ -173,11 +173,11 @@ AoE5L8=跳过虚拟环境创建
 DC8V8Z=虚拟环境创建成功
 DqRJ9Y=虚拟环境创建失败
 # ◆=upgrade_pip
-CwLYOz=[信息] pip 升级成功
-B2bNpx=[错误] pip 升级失败
+AzVHW7=[{}] pip 升级成功
+ATmu4Z=[{}] pip 升级失败
 # ◆=install_packages
-BYm_0S=[信息] {} 安装成功
-D9pnHg=[错误] {} 安装失败
+DPVi8z=[{}] {} 安装成功
+CvnKeR=[{}] {} 安装失败
 # ◆=show_pip_mirrors
 C6JrUi=序号
 B5VRns=镜像名
@@ -194,7 +194,7 @@ Dz9vrd=已取消配置，保持当前设置
 B4r_eA=已配置 pip 使用新的镜像
 AoQOEG=镜像
 Bovsx6=信任主机
-BzTGZo=[错误] 输入错误！请输入 0-{} 之间的数字
+CIsYrg=[{}] 输入错误！请输入 0-{} 之间的数字
 # ◆=create_py_venv
 DLX7Eq=测试全球 pip 可用镜像速度...
 # ◆=main
@@ -202,8 +202,8 @@ DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 
 # ■=python/cmd_handler.py
 # ◆=cmd_exec
-Cswzs3=[ERROR] 命令执行超时: {}
-CWE0RS=[ERROR] 命令执行异常: {}
+DLzynX=[{}] 命令执行超时: {}
+Ai3oQ8=[{}] 命令执行异常: {}
 # ◆=cmd_ex_be
 D69JIa=执行
 # ◆=monitor_progress
@@ -225,16 +225,16 @@ DE4sbC=安装{}完成
 # ◆=run_command
 DWA16R=执行命令失败: {}
 # ◆=config_sshd
-BFAuER=错误: SSH配置文件 {} 不存在
+D6wN7B=SSH配置文件 {} 不存在
 A7WXKO=已启动SSH (当前端口 {})，是否重新设置?
 DzCitM=输入新的SSH端口 (当前: {}):
 DZskNc=保持端口: {}
-CPPvBn=✓ 设置SSH端口: {}
-ARXwDM=✗ 设置SSH端口失败
+CuaNJT=[{}] 设置SSH端口: {}
+DrhGIB=[{}] 设置SSH端口失败
 A2bCmM=\n操作已取消
 DfSYhJ=允许 root 远程登录?:
-CCxIZL=✓ 允许 root 登录
-BjKmh3=✓ 禁止 root 登录
+DWnXBt=[{}] 允许 root 登录
+CCVEpj=[{}] 禁止 root 登录
 
 # ■=python/file_util.py
 # ◆=copy_file
@@ -255,8 +255,8 @@ BT_Y36=已还原文件
 BJsNKb=已更新源文件: {}
 DNbAuh=写入失败
 # ◆=get_code_files
-DXNBr6=警告: 文件不存在
-Dpwver=Error: No shell script files found
+AEmaC0=[{}]: 代码文件不存在
+A57dQK=[{}]: 未找到代码文件
 
 # ■=python/i18n.py
 # ◆=resolve_lang_files
@@ -328,13 +328,9 @@ B657zX=用户选择不修改网络配置
 
 # ■=python/system.py
 # ◆=confirm_action
-CPcmGT=操作已取消
-Bw0U--=输入错误，请输入 Y 或 N
-B8V-HW=输入处理出错: {}
-# ◆=install_packages
-CDudks=安装所需 Python 包...
-Cil2nd={package} 安装成功
-CiTxoG={package} 安装失败
+BRLnrE=操作已取消
+BuJv_n=输入错误，请输入 Y 或 N
+CeZZbb=输入处理出错: {}
 
 # ■=python/test_lang.py
 # ◆=show_help_info
