中英文翻译

--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -28,9 +28,9 @@ B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
 # ■=bin/i18n.sh
 # ◆=load_lang_files
 # ●=info@32
-AeQi7H=查找可用语言...
+Bpunoh=Searching for available languages...
 # ●=info@41
-DzUa6j=找到语言: $lang_name ($lang_file)
+BgtDY4=Languages found: {} ({})
 # ◆=resolve_lang_files
 # ●=_mf@69
 BcI858=模式参数错误 {0}
@@ -77,14 +77,14 @@ D6sy7g=请输入语言参数，如 --lang={0}
 # ■=bin/init_main.sh
 # ◆=config_sshd
 # ●=info@153
-CbkyTT=sshd 未安装，正在安装...
+Dj3cJb=sshd is not installed, installing now...
 # ●=info@172
-B8B0b-=SSH 配置已生效
+BLGrby=SSH configuration has been applied
 # ●=warning@174
-AWNMMM=systemctl restart $ssh_service 失败，请手动执行
+Dq9sXa=systemctl restart {} failed, please execute manually
 # ◆=install_docker
 # ●=info@197
-B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
+BMptZs=在 {} 上安装 Docker 与 Docker Compose...
 
 # ■=bin/test_lang.sh
 # ◆=show_help_info
@@ -137,11 +137,16 @@ ACMBwV=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
 # ●=info@18
-DvEyZZ=自动安装 '$lnx_cmd' ...
+DtZJ4v=Automatically installing {} ...
 # ●=exiterr@33
-BnlNCU=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}]
+Ar7Pu3={} installation failed, please install manually. Log: {} [{}]
 # ●=success@35
-CUzI33=$lnx_cmd 安装成功，日志: {0} [{1}]
+Bg2ZYl={} installation successful, Log: {} [{}]
+# ◆=monitor_progress
+# ●=string@157
+ATkIIM=Monitoring process {}...
+# ●=_mf@185
+APOzfr=Completed
 
 # ■=lib/docker.sh
 # ◆=show_notice
@@ -172,36 +177,36 @@ D6CXuV=Change {} language from [{}] to [{}]?
 # ■=lib/network.sh
 # ◆=count_down
 # ●=info@34
-BjHfVo=${duration}秒后修改网络配置：$IP_ADDR (接口 $IFACE)，请准备好重连。按 Ctrl+C 取消
+A_zTdU=Change network in {} seconds: {} (interface {}). Please be ready to reconnect. Press Ctrl+C to cancel
 # ◆=config_nmcli
-# ●=exiterr@49
-B3mgNd=错误：nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
-# ●=exiterr@75
-CiQhsW=连接激活失败，请检查网络并尝试重新连接
+# ●=exiterr@48
+D5wgQU=nmcli is not installed or unavailable. Please install the NetworkManager command-line tool first
+# ●=exiterr@74
+CwUgdj=Connection activation failed. Please check the network and try reconnecting
 # ◆=comment_ifupdown
-# ●=info@92
-CEr0rv=comment {} in {}
+# ●=info@91
+A7mROg=comment {} for {}
 # ◆=setup_systemd_networkd
-# ●=info@128
-Bs8Bxe=add new config file {}
+# ●=string@126
+B96uwR=change config file {}
 # ◆=config_default
-# ●=exiterr@176
-CcDg5_=错误：systemd-networkd 未安装或不可用
-# ●=exiterr@184
-AH9rvM=重启 systemd-networkd 失败，请检查配置文件后再试
+# ●=exiterr@174
+DR9Q62=systemd-networkd is not installed or unavailable
+# ●=exiterr@182
+Chdsa8=Failed to restart systemd-networkd. Please check and try again
 # ◆=network_config
-# ●=info@194
+# ●=string@192
 C1n7FE=NetworkManager is running (systemctl status NetworkManager)
-# ●=info@197
+# ●=string@195
 DSEEUY=ifupdown is running (systemctl status networking)
-# ●=info@200
+# ●=string@198
 DdVMc5=wicked is running (systemctl status wicked)
-# ●=info@203
+# ●=string@201
 CbKEUc=network-scripts is running (systemctl status network)
-# ●=info@207
+# ●=string@205
 DUEmDt=systemd-networkd is running (systemctl status systemd-networkd)
-# ●=exiterr@210
-DS2AXc=未知网络管理器，无法配置静态IP
+# ●=exiterr@208
+AVcfZk=Unknown network manager. Unable to configure static IP
 
 # ■=lib/python_install.sh
 # ◆=detect_system
@@ -230,10 +235,10 @@ DnoT0H=Average
 Dj_fn5=Waiting for file creation...
 # ●=_mf@190
 CxdIB-=Elapsed Time
-# ●=_mf@217
-BwEPPV=Download complete! File size
-# ●=_mf@219
-AN6lkx=Download failed
+# ●=string@217
+C3TQx_=[{}] Download complete! File size: {}
+# ●=string@219
+DJ9mym=[{}] Download failed
 # ◆=install_py_standalone
 # ●=info@230
 Cr3-oJ=Downloading Python {} standalone...
@@ -265,14 +270,14 @@ DC8V8Z=Virtual environment created successfully
 DqRJ9Y=Failed to create virtual environment
 # ◆=upgrade_pip
 # ●=string@309
-CwLYOz=[INFO] pip upgrade success
+AzVHW7=[{}] pip upgrade success
 # ●=string@311
-B2bNpx=[ERROR] pip upgrade failure
+ATmu4Z=[{}] pip upgrade failure
 # ◆=install_packages
 # ●=string@328
-BYm_0S=[INFO] {} install success
+DPVi8z=[{}] {} install success
 # ●=string@330
-D9pnHg=[ERROR] {} install failure
+CvnKeR=[{}] {} install failure
 # ◆=show_pip_mirrors
 # ●=_mf@362
 C6JrUi=Index
@@ -304,7 +309,7 @@ AoQOEG=Mirror
 # ●=_mf@461
 Bovsx6=Trusted Host
 # ●=string@467
-BzTGZo=[ERROR] Invalid input! Please enter a number between 0 and {}.
+CIsYrg=[{}] Invalid input! Please enter a number between 0 and {}
 # ◆=create_py_venv
 # ●=_mf@481
 DLX7Eq=Testing global pip mirror speeds...
@@ -315,9 +320,9 @@ DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 # ■=python/cmd_handler.py
 # ◆=cmd_exec
 # ●=_mf@60
-Cswzs3=[ERROR] Command execution timeout: {}
+DLzynX=[{}] Command execution timeout: {}
 # ●=_mf@64
-CWE0RS=[ERROR] Command execution error: {}
+Ai3oQ8=[{}] Command execution error: {}
 # ◆=cmd_ex_be
 # ●=_mf@128
 D69JIa=Executing
@@ -347,73 +352,94 @@ BQmsyM=Installing {}...
 DE4sbC=Installation of {} completed
 
 # ■=python/config_sshd.py
+# ◆=run_command
+# ●=string@27
+DWA16R=Failed to execute command: {}
 # ◆=config_sshd
-# ●=error@89
-CprXXr=错误: SSH配置文件 {} 不存在
-# ●=_mf@102
-DjrY3f=已启动SSH (当前端口 {})，是否重新设置?
-# ●=_mf@110
-B_09im=输入新的SSH端口 (当前: {}): 
-# ●=string@121
-DZ4Zcf=\n操作已取消
+# ●=error@92
+D6wN7B=SSH configuration file {} does not exist
+# ●=_mf@105
+A7WXKO=SSH is running (current port: {}). Do you want to reconfigure it?
+# ●=_mf@113
+DzCitM=Enter new SSH port (current: {}): 
+# ●=string@115
+DZskNc=Keep current port: {}
+# ●=string@120
+CuaNJT=[{}] SSH port set to: {}
+# ●=string@123
+DrhGIB=[{}] Failed to set SSH port
+# ●=string@125
+A2bCmM=\nOperation cancelled
+# ●=_mf@129
+DfSYhJ=Allow root login via SSH?:
+# ●=string@133
+DWnXBt=[{}] Root login allowed
+# ●=string@137
+CCVEpj=[{}] Root login disabled
 
 # ■=python/file_util.py
+# ◆=copy_file
+# ●=_mf@78
+AlJdHZ=Source file does not exist
+# ●=_mf@89
+Ds0-pw=Copy failed
 # ◆=file_backup_sj
 # ●=exiterr@116
-A-g65z=未指定需要备份的文件
+AQSRB5=No files specified for backup
 # ●=warning@128
-D1lk1B=未找到匹配 '{pattern}' 的文件
+AM2USl=No files found matching {}
 # ●=warning@141
-Dxey7R=备份文件 {backup_file} 已存在，跳过
-# ●=info@149
-CmH1ZD=已创建备份: {src_file} -> {backup_file}
-# ●=error@152
-BCkZrE=无法创建备份文件 {backup_file}: {e}
+AUY1Id=Backup file {} already exists, skipping
+# ●=_mf@149
+ArhIXB=Backup created
+# ●=_mf@152
+C_iVzJ=Unable to create backup file
 # ●=exiterr@157
-DvpZ6Q=重要文件无法备份
+DPb6VE=Important files cannot be backed up
 # ●=info@159
-DGFoIv=备份完成：成功 {backup_count} 个，跳过 {skip_count} 个，失败 {error_count} 个
+A5I7Z3=Backup completed: {} succeeded, {} skipped, {} failed
 # ◆=file_restore_sj
 # ●=exiterr@179
-BXScoo=备份文件 {backup_file} 不存在，还原失败
-# ●=info@185
-CAUKNQ=已还原文件: {backup_file} -> {src_file}
-# ●=exiterr@187
-A3ECb6=无法创建备份文件 {src_file}: {e}
-# ●=info@189
-DadsDq=还原文件：{src_file}
+Ay_Y2v=Backup file {} does not exist, restoration failed
+# ●=_mf@185
+BT_Y36=File restored
 # ◆=write_source_file
-# ●=info@205
-CoDUAv=已更新 source list: {path}
-# ●=error@207
-BcWbv7=写入失败: {e}
+# ●=info@203
+BJsNKb=source file updated: {}
+# ●=_mf@205
+DNbAuh=Write failed
+# ◆=get_code_files
+# ●=_mf@252
+AEmaC0=[{}]: Code file does not exist
+# ●=_mf@263
+A57dQK=[{}]: No code files found
 
 # ■=python/i18n.py
 # ◆=resolve_lang_files
-# ●=exiterr@73
+# ●=exiterr@87
 CtfOM-=Invalid mode parameter {}
-# ●=_mf@79
+# ●=_mf@93
 DLHmOZ={0} Language file already exists
-# ●=_mf@80
+# ●=_mf@94
 AlJdHf={0} Language file does not exist
 # ◆=get_lang_files
-# ●=exiterr@126
+# ●=exiterr@140
 BxsVtk=Please add the language file first
 # ◆=do_add_lang_files
-# ●=info@151
+# ●=info@165
 AI4IHR={0} Language file has been created
 # ◆=add_lang_files
-# ●=_mf@166
+# ●=_mf@180
 B04JoX=Are you sure to create the {0} language file?
-# ●=_mf@167
+# ●=_mf@181
 AZCzV1=Action cancelled. The {0} file was not created
 # ◆=do_del_lang_files
-# ●=info@191
+# ●=info@205
 A4CItw={0} Language file has been deleted
 # ◆=del_lang_files
-# ●=_mf@203
+# ●=_mf@217
 CwGdLu=Are you sure to delete the {0} language file?
-# ●=_mf@205
+# ●=_mf@219
 Be_6w4=Action cancelled. File deletion aborted
 
 # ■=python/mirror/linux_speed.py
@@ -448,29 +474,31 @@ C68uzc=Download speed
 CvE-z3=Invalid input! Please enter a number between 0-{}
 # ●=error@356
 BjJxaz=Invalid input! Please enter a number
+# ●=string@361
+AxAUpX=Operation canceled
 # ◆=print_results
 # ●=_mf@368
-CCoL8z=排名
+AOAev1=Rank
 # ●=_mf@368
-AmHqF-=速度(KB/s)
+Ah5sGh=Speed(KB/s)
 # ●=_mf@368
-CCqAV3=响应时间(s)
+CD_dye=Resp Time(s)
 # ●=_mf@368
-DHzpqW=成功率
+A03XzI=Succ Rate
 # ●=_mf@368
-DPaV3j=国家/地区
+CZk3S6=Country/Region
 # ●=_mf@368
-C_j0ry=镜像URL
+AyPHP9=Mirror URL
 # ◆=run
-# ●=string@384
+# ●=string@383
 Dsnlq3=Could not find the {} source configuration file
-# ●=_mf@388
+# ●=_mf@387
 AD12ND=Would you like to reselect a mirror?
-# ●=_mf@390
+# ●=_mf@389
 Ap74Rf=Currently selected mirror
-# ●=string@399
+# ●=string@398
 D4jlM5=An error occurred during program execution: {}
-# ●=_mf@407
+# ●=_mf@406
 AiVn1Y=Would you like to upgrade the packages immediately?
 
 # ■=python/mirror/linux_speed_arch.py
@@ -480,43 +508,38 @@ CMsLwX=Do you want to switch to the new mirror list?
 
 # ■=python/network_util.py
 # ◆=setup_octet
-# ●=_mf@137
-AMqDM_=请输入静态IP地址的最后一段 (1-255) [默认: {}]: 
+# ●=string@130
+CPwsn7=The current IP address is invalid
+# ●=_mf@135
+CNQ6-k=Please enter the last octet of the static IP address (1–255) [default: {}]: 
 # ●=string@141
-CXjGI-=请输入数字
+DTArwK=Please enter a number
 # ●=string@146
-CtqJsG=输入必须在 1~255 之间
+BteKhj=The input must be between 1 and 255
 # ●=string@150
-Dqn3KQ=输入的静态IP地址不能与网关相同，请重新输入
+D4k_4H=The static IP address cannot be the same as the gateway
 # ●=string@159
-DZ4Zcf=\n操作已取消
+A2bCmM=\nOperation cancelled
 # ◆=fix_ip
 # ●=info@180
-Cn2ESg={env_nw['IS_CLOUD']} 云服务器无需设置固定IP
-# ●=_mf@187
+B41yVK={} Cloud servers do not require a static IP
+# ●=_mf@186
 AJrUNk=A static IP is already configured on the server. Would you like to adjust it?
-# ●=_mf@191
+# ●=_mf@189
 CbxkLM=Detected that the server is using a dynamic IP. Would you like to change it to a static IP?
-# ●=_mf@194
+# ●=_mf@191
 DvWz9u=Detected that the server might be using a static IP. Would you like to adjust it?
-# ●=_mf@197
+# ●=_mf@193
 B657zX=User chose not to modify the network configuration
 
 # ■=python/system.py
 # ◆=confirm_action
 # ●=_mf@59
-CPcmGT=操作已取消
+BRLnrE=Operation cancelled
 # ●=_mf@61
-Bw0U--=输入错误，请输入 Y 或 N
+BuJv_n=Invalid input. Please enter Y or N
 # ●=string@98
-B8V-HW=输入处理出错: {}
-# ◆=install_packages
-# ●=info@252
-CDudks=安装所需 Python 包...
-# ●=info@262
-Cil2nd={package} 安装成功
-# ●=warning@264
-CiTxoG={package} 安装失败
+CeZZbb=Input processing error: {}
 
 # ■=python/test_lang.py
 # ◆=show_help_info
