--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -55,7 +55,7 @@ Dj3cJb=sshd is not installed, installing now...
 BLGrby=SSH configuration has been applied
 Dq9sXa=systemctl restart {} failed, please execute manually
 # ◆=install_docker
-B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
+BMptZs=在 {} 上安装 Docker 与 Docker Compose...
 
 # ■=bin/test_lang.sh
 # ◆=show_help_info
@@ -119,24 +119,24 @@ D6CXuV=Change {} language from [{}] to [{}]?
 
 # ■=lib/network.sh
 # ◆=count_down
-BjHfVo=${duration}秒后修改网络配置：$IP_ADDR (接口 $IFACE)，请准备好重连。按 Ctrl+C 取消
+A_zTdU=Change network in {} seconds: {} (interface {}). Please be ready to reconnect. Press Ctrl+C to cancel
 # ◆=config_nmcli
-B3mgNd=错误：nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
-CiQhsW=连接激活失败，请检查网络并尝试重新连接
+D5wgQU=nmcli is not installed or unavailable. Please install the NetworkManager command-line tool first
+CwUgdj=Connection activation failed. Please check the network and try reconnecting
 # ◆=comment_ifupdown
-CEr0rv=comment {} in {}
+A7mROg=comment {} for {}
 # ◆=setup_systemd_networkd
-Bs8Bxe=add new config file {}
+B96uwR=change config file {}
 # ◆=config_default
-CcDg5_=错误：systemd-networkd 未安装或不可用
-AH9rvM=重启 systemd-networkd 失败，请检查配置文件后再试
+DR9Q62=systemd-networkd is not installed or unavailable
+Chdsa8=Failed to restart systemd-networkd. Please check and try again
 # ◆=network_config
 C1n7FE=NetworkManager is running (systemctl status NetworkManager)
 DSEEUY=ifupdown is running (systemctl status networking)
 DdVMc5=wicked is running (systemctl status wicked)
 CbKEUc=network-scripts is running (systemctl status network)
 DUEmDt=systemd-networkd is running (systemctl status systemd-networkd)
-DS2AXc=未知网络管理器，无法配置静态IP
+AVcfZk=Unknown network manager. Unable to configure static IP
 
 # ■=lib/python_install.sh
 # ◆=detect_system
@@ -294,6 +294,7 @@ Cph1R3=You selected
 C68uzc=Download speed
 CvE-z3=Invalid input! Please enter a number between 0-{}
 BjJxaz=Invalid input! Please enter a number
+AxAUpX=Operation canceled
 # ◆=print_results
 AOAev1=Rank
 Ah5sGh=Speed(KB/s)
@@ -314,13 +315,14 @@ CMsLwX=Do you want to switch to the new mirror list?
 
 # ■=python/network_util.py
 # ◆=setup_octet
-AMqDM_=请输入静态IP地址的最后一段 (1-255) [默认: {}]:
-CXjGI-=请输入数字
-CtqJsG=输入必须在 1~255 之间
-Dqn3KQ=输入的静态IP地址不能与网关相同，请重新输入
-DZ4Zcf=\n操作已取消
+CPwsn7=The current IP address is invalid
+CNQ6-k=Please enter the last octet of the static IP address (1–255) [default: {}]:
+DTArwK=Please enter a number
+BteKhj=The input must be between 1 and 255
+D4k_4H=The static IP address cannot be the same as the gateway
+A2bCmM=\nOperation cancelled
 # ◆=fix_ip
-Cn2ESg={env_nw['IS_CLOUD']} 云服务器无需设置固定IP
+B41yVK={} Cloud servers do not require a static IP
 AJrUNk=A static IP is already configured on the server. Would you like to adjust it?
 CbxkLM=Detected that the server is using a dynamic IP. Would you like to change it to a static IP?
 DvWz9u=Detected that the server might be using a static IP. Would you like to adjust it?
