--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -55,7 +55,7 @@ Dj3cJb=sshd 未安装，正在安装...
 BLGrby=SSH 配置已生效
 Dq9sXa=systemctl restart {} 失败，请手动执行
 # ◆=install_docker
-B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
+BMptZs=在 {} 上安装 Docker 与 Docker Compose...
 
 # ■=bin/test_lang.sh
 # ◆=show_help_info
@@ -119,24 +119,24 @@ D6CXuV=Change {} language from [{}] to [{}]?
 
 # ■=lib/network.sh
 # ◆=count_down
-BjHfVo=${duration}秒后修改网络配置：$IP_ADDR (接口 $IFACE)，请准备好重连。按 Ctrl+C 取消
+A_zTdU={}秒后修改网络配置：{} (接口 {})，请准备好重连。按 Ctrl+C 取消
 # ◆=config_nmcli
-B3mgNd=错误：nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
-CiQhsW=连接激活失败，请检查网络并尝试重新连接
+D5wgQU=nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
+CwUgdj=连接激活失败，请检查网络并尝试重新连接
 # ◆=comment_ifupdown
-CEr0rv=comment {} in {}
+A7mROg={} 中注释 {}
 # ◆=setup_systemd_networkd
-Bs8Bxe=add new config file {}
+B96uwR=修改配置文件 {}
 # ◆=config_default
-CcDg5_=错误：systemd-networkd 未安装或不可用
-AH9rvM=重启 systemd-networkd 失败，请检查配置文件后再试
+DR9Q62=systemd-networkd 未安装或不可用
+Chdsa8=systemd-networkd 重启失败，请检查后再试
 # ◆=network_config
-C1n7FE=NetworkManager is running (systemctl status NetworkManager)
-DSEEUY=ifupdown is running (systemctl status networking)
-DdVMc5=wicked is running (systemctl status wicked)
-CbKEUc=network-scripts is running (systemctl status network)
-DUEmDt=systemd-networkd is running (systemctl status systemd-networkd)
-DS2AXc=未知网络管理器，无法配置静态IP
+C1n7FE=NetworkManager 正在运行 (systemctl status NetworkManager)
+DSEEUY=ifupdown 正在运行 (systemctl status networking)
+DdVMc5=wicked 正在运行 (systemctl status wicked)
+CbKEUc=network-scripts 正在运行 (systemctl status network)
+DUEmDt=systemd-networkd 正在运行 (systemctl status systemd-networkd)
+AVcfZk=未知网络管理器，无法配置静态IP
 
 # ■=lib/python_install.sh
 # ◆=detect_system
@@ -294,6 +294,7 @@ Cph1R3=您选择了
 C68uzc=下载速度
 CvE-z3=无效输入！请输入 0-{} 之间的数字
 BjJxaz=无效输入！请输入一个数字
+AxAUpX=操作已取消
 # ◆=print_results
 AOAev1=排名
 Ah5sGh=速度(KB/s)
@@ -314,13 +315,14 @@ CMsLwX=是否变更为新的镜像列表?
 
 # ■=python/network_util.py
 # ◆=setup_octet
-AMqDM_=请输入静态IP地址的最后一段 (1-255) [默认: {}]:
-CXjGI-=请输入数字
-CtqJsG=输入必须在 1~255 之间
-Dqn3KQ=输入的静态IP地址不能与网关相同，请重新输入
-DZ4Zcf=\n操作已取消
+CPwsn7=当前IP地址无效
+CNQ6-k=请输入静态IP地址的最后一段 (1-255) [默认: {}]:
+DTArwK=请输入数字
+BteKhj=输入必须在 1~255 之间
+D4k_4H=输入的静态IP地址不能与网关相同
+A2bCmM=\n操作已取消
 # ◆=fix_ip
-Cn2ESg={env_nw['IS_CLOUD']} 云服务器无需设置固定IP
+B41yVK={} 云服务器无需设置固定IP
 AJrUNk=检测到服务器已配置静态IP，是否调整IP？
 CbxkLM=检测到服务器使用动态IP，是否改为静态IP？
 DvWz9u=检测到服务器可能使用静态IP，是否调整IP？
