--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -180,9 +180,9 @@ D6CXuV=Change {} language from [{}] to [{}]?
 A_zTdU=Change network in {} seconds: {} (interface {}). Please be ready to reconnect. Press Ctrl+C to cancel
 # ◆=config_nmcli
 # ●=exiterr@48
-D5wgQU=nmcli is not installed or unavailable. Please install the NetworkManager command-line tool first
+AmqOYu=nmcli is not installed or unavailable. Please install it and try again
 # ●=exiterr@74
-CwUgdj=Connection activation failed. Please check the network and try reconnecting
+AAVRlb=Failed to restart NetworkManager. Please check and try again
 # ◆=comment_ifupdown
 # ●=info@91
 A7mROg=comment {} for {}
