--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -121,8 +121,8 @@ D6CXuV=Change {} language from [{}] to [{}]?
 # ◆=count_down
 A_zTdU=Change network in {} seconds: {} (interface {}). Please be ready to reconnect. Press Ctrl+C to cancel
 # ◆=config_nmcli
-D5wgQU=nmcli is not installed or unavailable. Please install the NetworkManager command-line tool first
-CwUgdj=Connection activation failed. Please check the network and try reconnecting
+AmqOYu=nmcli is not installed or unavailable. Please install it and try again
+AAVRlb=Failed to restart NetworkManager. Please check and try again
 # ◆=comment_ifupdown
 A7mROg=comment {} for {}
 # ◆=setup_systemd_networkd
