--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -121,8 +121,8 @@ D6CXuV=Change {} language from [{}] to [{}]?
 # ◆=count_down
 A_zTdU={}秒后修改网络配置：{} (接口 {})，请准备好重连。按 Ctrl+C 取消
 # ◆=config_nmcli
-D5wgQU=nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
-CwUgdj=连接激活失败，请检查网络并尝试重新连接
+AmqOYu=nmcli未安装或不可用，请先安装后再试
+AAVRlb=NetworkManager 重启失败，请检查后再试
 # ◆=comment_ifupdown
 A7mROg={} 中注释 {}
 # ◆=setup_systemd_networkd
