bug fix和文字调整

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -226,7 +226,7 @@ DE4sbC=Installation of {} completed
 DWA16R=Failed to execute command: {}
 # ◆=config_sshd
 D6wN7B=SSH configuration file {} does not exist
-A7WXKO=SSH is running (current port: {}). Do you want to reconfigure it?
+DxM0Fm=SSH is running (current port: {}). Do you want to configure it?
 DzCitM=Enter new SSH port (current: {}):
 DZskNc=Keep current port: {}
 CuaNJT=[{}] SSH port set to: {}
