--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -226,7 +226,7 @@ DE4sbC=安装{}完成
 DWA16R=执行命令失败: {}
 # ◆=config_sshd
 D6wN7B=SSH配置文件 {} 不存在
-A7WXKO=已启动SSH (当前端口 {})，是否重新设置?
+DxM0Fm=已启动SSH (当前端口 {})，是否需要设置?
 DzCitM=输入新的SSH端口 (当前: {}):
 DZskNc=保持端口: {}
 CuaNJT=[{}] 设置SSH端口: {}
