--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -305,7 +305,7 @@ AyPHP9=Mirror URL
 # ◆=run
 Dsnlq3=Could not find the {} source configuration file
 AD12ND=Would you like to reselect a mirror?
-Ap74Rf=Currently selected mirror
+BkZHXM=Current {} mirror
 D4jlM5=An error occurred during program execution: {}
 AiVn1Y=Would you like to upgrade the packages immediately?
 
