--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -305,7 +305,7 @@ AyPHP9=镜像URL
 # ◆=run
 Dsnlq3=没有找到 {} 源配置文件
 AD12ND=是否重新选择镜像?
-Ap74Rf=已选镜像
+BkZHXM=当前 {} 镜像
 D4jlM5=程序运行出错: {}
 AiVn1Y=是否立刻升级软件包?
 
