--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -173,11 +173,11 @@ AoE5L8=Skipping virtual environment creation
 DC8V8Z=Virtual environment created successfully
 DqRJ9Y=Failed to create virtual environment
 # ◆=upgrade_pip
-AzVHW7=[{}] pip upgrade success
-ATmu4Z=[{}] pip upgrade failure
+D6vb-V=upgrade success
+AGg8Fk=upgrade failure
 # ◆=install_packages
-DPVi8z=[{}] {} install success
-CvnKeR=[{}] {} install failure
+DOoYYE=install success
+DaZ4fT=install failure
 # ◆=show_pip_mirrors
 C6JrUi=Index
 B5VRns=Mirror Name
@@ -202,8 +202,8 @@ DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 
 # ■=python/cmd_handler.py
 # ◆=cmd_exec
-DLzynX=[{}] Command execution timeout: {}
-Ai3oQ8=[{}] Command execution error: {}
+A0d5Uw=Command execution timeout
+CfCUw1=Command execution error
 # ◆=cmd_ex_be
 D69JIa=Executing
 # ◆=monitor_progress
@@ -226,15 +226,15 @@ DE4sbC=Installation of {} completed
 DWA16R=Failed to execute command: {}
 # ◆=config_sshd
 D6wN7B=SSH configuration file {} does not exist
-DxM0Fm=SSH is running (current port: {}). Do you want to configure it?
+DPfimc=Root login allowed
+BQqoTt=Root login disabled
+AZKZT4=Current SSH is running on Port {}, {}
+BNOqlk=Would you like to reconfigure it?
 DzCitM=Enter new SSH port (current: {}):
-DZskNc=Keep current port: {}
-CuaNJT=[{}] SSH port set to: {}
-DrhGIB=[{}] Failed to set SSH port
+AcZ5l2=SSH port set to
+ARXwDI=Failed to set SSH port
 A2bCmM=\nOperation cancelled
-DfSYhJ=Allow root login via SSH?:
-DWnXBt=[{}] Root login allowed
-CCVEpj=[{}] Root login disabled
+D6jDYn=Allow root login via SSH?
 
 # ■=python/file_util.py
 # ◆=copy_file
@@ -311,7 +311,7 @@ AiVn1Y=Would you like to upgrade the packages immediately?
 
 # ■=python/mirror/linux_speed_arch.py
 # ◆=choose_mirror
-CMsLwX=Do you want to switch to the new mirror list?
+BwzzIm=Would you like to switch to the new mirror list?
 
 # ■=python/network_util.py
 # ◆=setup_octet
