--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -173,11 +173,11 @@ AoE5L8=跳过虚拟环境创建
 DC8V8Z=虚拟环境创建成功
 DqRJ9Y=虚拟环境创建失败
 # ◆=upgrade_pip
-AzVHW7=[{}] pip 升级成功
-ATmu4Z=[{}] pip 升级失败
+D6vb-V=升级成功
+AGg8Fk=升级失败
 # ◆=install_packages
-DPVi8z=[{}] {} 安装成功
-CvnKeR=[{}] {} 安装失败
+DOoYYE=安装成功
+DaZ4fT=安装失败
 # ◆=show_pip_mirrors
 C6JrUi=序号
 B5VRns=镜像名
@@ -202,8 +202,8 @@ DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 
 # ■=python/cmd_handler.py
 # ◆=cmd_exec
-DLzynX=[{}] 命令执行超时: {}
-Ai3oQ8=[{}] 命令执行异常: {}
+A0d5Uw=命令执行超时
+CfCUw1=命令执行异常
 # ◆=cmd_ex_be
 D69JIa=执行
 # ◆=monitor_progress
@@ -226,15 +226,15 @@ DE4sbC=安装{}完成
 DWA16R=执行命令失败: {}
 # ◆=config_sshd
 D6wN7B=SSH配置文件 {} 不存在
-DxM0Fm=已启动SSH (当前端口 {})，是否需要设置?
+DPfimc=允许 root 登录
+BQqoTt=禁止 root 登录
+AZKZT4=当前 SSH 运行在 {} 端口, {}
+BNOqlk=是否需要重新设置?
 DzCitM=输入新的SSH端口 (当前: {}):
-DZskNc=保持端口: {}
-CuaNJT=[{}] 设置SSH端口: {}
-DrhGIB=[{}] 设置SSH端口失败
+AcZ5l2=设置SSH端口
+ARXwDI=设置SSH端口失败
 A2bCmM=\n操作已取消
-DfSYhJ=允许 root 远程登录?:
-DWnXBt=[{}] 允许 root 登录
-CCVEpj=[{}] 禁止 root 登录
+D6jDYn=允许 root 远程登录?
 
 # ■=python/file_util.py
 # ◆=copy_file
@@ -311,7 +311,7 @@ AiVn1Y=是否立刻升级软件包?
 
 # ■=python/mirror/linux_speed_arch.py
 # ◆=choose_mirror
-CMsLwX=是否变更为新的镜像列表?
+BwzzIm=是否变更为新的镜像列表?
 
 # ■=python/network_util.py
 # ◆=setup_octet
