--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -184,28 +184,28 @@ AmqOYu=nmcli is not installed or unavailable. Please install it and try again
 # ●=exiterr@74
 AAVRlb=Failed to restart NetworkManager. Please check and try again
 # ◆=comment_ifupdown
-# ●=info@91
+# ●=info@92
 A7mROg=comment {} for {}
 # ◆=setup_systemd_networkd
-# ●=string@126
+# ●=string@128
 B96uwR=change config file {}
 # ◆=config_default
-# ●=exiterr@174
+# ●=exiterr@178
 DR9Q62=systemd-networkd is not installed or unavailable
-# ●=exiterr@182
+# ●=exiterr@186
 Chdsa8=Failed to restart systemd-networkd. Please check and try again
 # ◆=network_config
-# ●=string@192
+# ●=string@196
 C1n7FE=NetworkManager is running (systemctl status NetworkManager)
-# ●=string@195
+# ●=string@199
 DSEEUY=ifupdown is running (systemctl status networking)
-# ●=string@198
+# ●=string@202
 DdVMc5=wicked is running (systemctl status wicked)
-# ●=string@201
-CbKEUc=network-scripts is running (systemctl status network)
 # ●=string@205
+CbKEUc=network-scripts is running (systemctl status network)
+# ●=string@209
 DUEmDt=systemd-networkd is running (systemctl status systemd-networkd)
-# ●=exiterr@208
+# ●=exiterr@212
 AVcfZk=Unknown network manager. Unable to configure static IP
 
 # ■=lib/python_install.sh
@@ -269,15 +269,15 @@ DC8V8Z=Virtual environment created successfully
 # ●=exiterr@293
 DqRJ9Y=Failed to create virtual environment
 # ◆=upgrade_pip
-# ●=string@309
-AzVHW7=[{}] pip upgrade success
-# ●=string@311
-ATmu4Z=[{}] pip upgrade failure
+# ●=_mf@309
+D6vb-V=upgrade success
+# ●=_mf@311
+AGg8Fk=upgrade failure
 # ◆=install_packages
-# ●=string@328
-DPVi8z=[{}] {} install success
-# ●=string@330
-CvnKeR=[{}] {} install failure
+# ●=_mf@328
+DOoYYE=install success
+# ●=_mf@330
+DaZ4fT=install failure
 # ◆=show_pip_mirrors
 # ●=_mf@362
 C6JrUi=Index
@@ -320,9 +320,9 @@ DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 # ■=python/cmd_handler.py
 # ◆=cmd_exec
 # ●=_mf@60
-DLzynX=[{}] Command execution timeout: {}
+A0d5Uw=Command execution timeout
 # ●=_mf@64
-Ai3oQ8=[{}] Command execution error: {}
+CfCUw1=Command execution error
 # ◆=cmd_ex_be
 # ●=_mf@128
 D69JIa=Executing
@@ -356,26 +356,26 @@ DE4sbC=Installation of {} completed
 # ●=string@27
 DWA16R=Failed to execute command: {}
 # ◆=config_sshd
-# ●=error@92
+# ●=error@97
 D6wN7B=SSH configuration file {} does not exist
-# ●=_mf@105
-A7WXKO=SSH is running (current port: {}). Do you want to reconfigure it?
-# ●=_mf@113
+# ●=_mf@110
+DPfimc=Root login allowed
+# ●=_mf@110
+BQqoTt=Root login disabled
+# ●=string@111
+AZKZT4=Current SSH is running on Port {}, {}
+# ●=_mf@112
+BNOqlk=Would you like to reconfigure it?
+# ●=_mf@120
 DzCitM=Enter new SSH port (current: {}): 
-# ●=string@115
-DZskNc=Keep current port: {}
-# ●=string@120
-CuaNJT=[{}] SSH port set to: {}
-# ●=string@123
-DrhGIB=[{}] Failed to set SSH port
-# ●=string@125
+# ●=_mf@122
+AcZ5l2=SSH port set to
+# ●=_mf@130
+ARXwDI=Failed to set SSH port
+# ●=string@132
 A2bCmM=\nOperation cancelled
-# ●=_mf@129
-DfSYhJ=Allow root login via SSH?:
-# ●=string@133
-DWnXBt=[{}] Root login allowed
-# ●=string@137
-CCVEpj=[{}] Root login disabled
+# ●=_mf@136
+D6jDYn=Allow root login via SSH?
 
 # ■=python/file_util.py
 # ◆=copy_file
@@ -495,7 +495,7 @@ Dsnlq3=Could not find the {} source configuration file
 # ●=_mf@387
 AD12ND=Would you like to reselect a mirror?
 # ●=_mf@389
-Ap74Rf=Currently selected mirror
+BkZHXM=Current {} mirror
 # ●=string@398
 D4jlM5=An error occurred during program execution: {}
 # ●=_mf@406
@@ -504,7 +504,7 @@ AiVn1Y=Would you like to upgrade the packages immediately?
 # ■=python/mirror/linux_speed_arch.py
 # ◆=choose_mirror
 # ●=_mf@132
-CMsLwX=Do you want to switch to the new mirror list?
+BwzzIm=Would you like to switch to the new mirror list?
 
 # ■=python/network_util.py
 # ◆=setup_octet
