--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -157,7 +157,7 @@ CxdIB-=Elapsed Time
 C3TQx_=[{}] Download complete! File size: {}
 DJ9mym=[{}] Download failed
 # ◆=install_py_standalone
-Cr3-oJ=Downloading Python {} standalone...
+DSV7ht=Downloading Python {} standalone to {} ...
 DnuwZu=Installing Python to {}...
 B62oO-=Extraction and installation failed
 # ◆=install_py_bin
