--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -157,7 +157,7 @@ CxdIB-=运行时间
 C3TQx_=[{}] 下载完成! 文件大小: {}
 DJ9mym=[{}] 下载失败
 # ◆=install_py_standalone
-Cr3-oJ=下载 Python {} standalone...
+DSV7ht=下载 Python {} standalone 到 {} ...
 DnuwZu=安装 Python 到 {}...
 B62oO-=解压安装失败
 # ◆=install_py_bin
