check_py_version补充判断逻辑

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -160,15 +160,14 @@ DJ9mym=[{}] Download failed
 DSV7ht=Downloading Python {} standalone to {} ...
 DnuwZu=Installing Python to {}...
 B62oO-=Extraction and installation failed
-# ◆=install_py_bin
-D6gi9o=Python {} installation completed!
-DfZCnc=Python {} installation failed: {} does not exist or is not executable
 # ◆=install_py_venv
 Djzzvr=Virtual environment {} already exists. Delete and reinstall it?
 C_9sLZ=Current pip mirror:
 BJVBQG={}Reinstall pip and the required Python libraries?
 AoE5L8=Skipping virtual environment creation
 6bcebee3496f45cc552aa606f8112a2d=Deleting virtual environment {}...
+D6gi9n=Python {} installation completed
+DfZCnc=Python {} installation failed: {} does not exist or is not executable
 96f72e8313838714d9e659fde4fd343c=Creating virtual environment {}...
 DC8V8Z=Virtual environment created successfully
 DqRJ9Y=Failed to create virtual environment
