--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -160,15 +160,14 @@ DJ9mym=[{}] 下载失败
 DSV7ht=下载 Python {} standalone 到 {} ...
 DnuwZu=安装 Python 到 {}...
 B62oO-=解压安装失败
-# ◆=install_py_bin
-D6gi9o=Python {} 安装完成！
-DfZCnc=Python {} 安装失败: {} 不存在或不可执行
 # ◆=install_py_venv
 Djzzvr=虚拟环境 {} 已存在，是否删除重建?
 C_9sLZ=当前pip镜像:
 BJVBQG={}是否重建 pip 和所需 python 库?
 AoE5L8=跳过虚拟环境创建
 6bcebee3496f45cc552aa606f8112a2d=删除虚拟环境 {}...
+D6gi9n=Python {} 安装完成
+DfZCnc=Python {} 安装失败: {} 不存在或不可执行
 96f72e8313838714d9e659fde4fd343c=创建虚拟环境 {}...
 DC8V8Z=虚拟环境创建成功
 DqRJ9Y=虚拟环境创建失败
