--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -148,16 +148,17 @@ DAV8e8=Interrupt detected, terminating background download process (PID={}...)
 # ◆=smart_geturl
 CcZPFX=Usage: smart_geturl <output_file> <URL>
 CxZTTU=Neither wget nor curl is installed on the system, unable to download.
-DLuT5a=Starting download
+Acst9K=Download file size
 CKMRMM=Start time
 AOGJnE=Size
 DnoT0H=Average
 Dj_fn5=Waiting for file creation...
 CxdIB-=Elapsed Time
+AmC3ey=If your network is slow, please download or install Python 3.10+ manually
 C3TQx_=[{}] Download complete! File size: {}
 DJ9mym=[{}] Download failed
 # ◆=install_py_standalone
-DSV7ht=Downloading Python {} standalone to {} ...
+Cr3-oJ=Downloading Python {} standalone...
 DnuwZu=Installing Python to {}...
 B62oO-=Extraction and installation failed
 # ◆=install_py_venv
