--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -148,16 +148,17 @@ DAV8e8=检测到中断，正在终止后台下载进程 (PID={}...)
 # ◆=smart_geturl
 CcZPFX=用法 smart_geturl <输出文件> <URL>
 CxZTTU=系统未安装 wget 或 curl，无法下载
-DLuT5a=开始下载
+Acst9K=下载文件大小
 CKMRMM=开始时间
 AOGJnE=大小
 DnoT0H=平均
 Dj_fn5=等待文件创建...
 CxdIB-=运行时间
+AmC3ey=如果您的网速较慢，请手动下载或安装 Python 3.10 及以上版本
 C3TQx_=[{}] 下载完成! 文件大小: {}
 DJ9mym=[{}] 下载失败
 # ◆=install_py_standalone
-DSV7ht=下载 Python {} standalone 到 {} ...
+Cr3-oJ=下载 Python {} standalone...
 DnuwZu=安装 Python 到 {}...
 B62oO-=解压安装失败
 # ◆=install_py_venv
