monitor_progress的bug fix; check_py_version隐藏报错信息; 其他文字调整

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -93,7 +93,7 @@ ACMBwV=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败
 # ◆=install_base_pkg
 DtZJ4v=Automatically installing {} ...
 Ar7Pu3={} installation failed, please install manually. Log: {} [{}]
-Bg2ZYl={} installation successful, Log: {} [{}]
+DeH9WO={} installation successful
 # ◆=monitor_progress
 ATkIIM=Monitoring process {}...
 APOzfr=Completed
@@ -154,7 +154,7 @@ AOGJnE=Size
 DnoT0H=Average
 Dj_fn5=Waiting for file creation...
 CxdIB-=Elapsed Time
-AmC3ey=If your network is slow, please download or install Python 3.10+ manually
+AmC3e0=\nIf your network is slow, please download or install Python 3.10+ manually
 C3TQx_=[{}] Download complete! File size: {}
 DJ9mym=[{}] Download failed
 # ◆=install_py_standalone
