--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -91,9 +91,9 @@ ACMBwV=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
-DtZJ4v=自动安装 {} ...
+DtZJ4v=自动安装 {}...
 Ar7Pu3={} 安装失败，请手动安装，日志: {} [{}]
-Bg2ZYl={} 安装成功，日志: {} [{}]
+DeH9WO={} 安装成功
 # ◆=monitor_progress
 ATkIIM=监控进程 {}...
 APOzfr=完成
@@ -154,7 +154,7 @@ AOGJnE=大小
 DnoT0H=平均
 Dj_fn5=等待文件创建...
 CxdIB-=运行时间
-AmC3ey=如果您的网速较慢，请手动下载或安装 Python 3.10 及以上版本
+AmC3e0=\n如您网速较慢，请手动下载或安装 Python 3.10 及以上版本
 C3TQx_=[{}] 下载完成! 文件大小: {}
 DJ9mym=[{}] 下载失败
 # ◆=install_py_standalone
