解决sigint信号丢失问题; 垃圾代码清理

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -80,14 +80,6 @@ Aw3y8l={0} 语言文件已创建
 Ai7UlQ=operation is cancelled
 # ◆=confirm_action
 Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
-# ◆=file_backup_sj
-A-g65z=未指定需要备份的文件
-D7A4Jy=警告：未找到匹配 '$pattern' 的文件
-BDbdpK=备份文件 $backup_file 已存在，跳过
-CPJo9U=已创建备份: $src_file -> $backup_file
-CNpapj=错误：无法创建备份文件 $backup_file
-DvpZ6Q=重要文件无法备份
-ACMBwV=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败 $error_count 个
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
@@ -147,9 +139,9 @@ BlWk8P=Unsupported system type: {}
 DAV8e8=Interrupt detected, terminating background download process (PID={}...)
 # ◆=smart_geturl
 CcZPFX=Usage: smart_geturl <output_file> <URL>
-CxZTTU=Neither wget nor curl is installed on the system, unable to download.
-Acst9K=Download file size
+B1HWyp=File size
 CKMRMM=Start time
+CxZTTU=Neither wget nor curl is installed on the system, unable to download.
 AOGJnE=Size
 DnoT0H=Average
 Dj_fn5=Waiting for file creation...
