--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -80,14 +80,6 @@ Aw3y8l={0} 语言文件已创建
 Ai7UlQ=操作已取消
 # ◆=confirm_action
 Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
-# ◆=file_backup_sj
-A-g65z=未指定需要备份的文件
-D7A4Jy=警告：未找到匹配 '$pattern' 的文件
-BDbdpK=备份文件 $backup_file 已存在，跳过
-CPJo9U=已创建备份: $src_file -> $backup_file
-CNpapj=错误：无法创建备份文件 $backup_file
-DvpZ6Q=重要文件无法备份
-ACMBwV=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败 $error_count 个
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
@@ -147,9 +139,9 @@ BlWk8P=不支持的系统类型: {}
 DAV8e8=检测到中断，正在终止后台下载进程 (PID={}...)
 # ◆=smart_geturl
 CcZPFX=用法 smart_geturl <输出文件> <URL>
-CxZTTU=系统未安装 wget 或 curl，无法下载
-Acst9K=下载文件大小
+B1HWyp=文件大小
 CKMRMM=开始时间
+CxZTTU=系统未安装 wget 或 curl，无法下载
 AOGJnE=大小
 DnoT0H=平均
 Dj_fn5=等待文件创建...
