check_py_version/smart_geturl的bug fix；其他文字调整

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -130,6 +130,10 @@ CbKEUc=network-scripts is running (systemctl status network)
 DUEmDt=systemd-networkd is running (systemctl status systemd-networkd)
 AVcfZk=Unknown network manager. Unable to configure static IP
 
+# ■=lib/python_bridge.sh
+# ◆=sh_clear_cache
+BSEB2I=Python executable file {} does not exist
+
 # ■=lib/python_install.sh
 # ◆=detect_system
 AM9k6I=Unsupported architecture: {}
@@ -139,6 +143,8 @@ BlWk8P=Unsupported system type: {}
 DAV8e8=Interrupt detected, terminating background download process (PID={}...)
 # ◆=smart_geturl
 CcZPFX=Usage: smart_geturl <output_file> <URL>
+D6WY5X=Web resource
+Bgl2oO=Output path
 B1HWyp=File size
 CKMRMM=Start time
 CxZTTU=Neither wget nor curl is installed on the system, unable to download.
@@ -146,21 +152,21 @@ AOGJnE=Size
 DnoT0H=Average
 Dj_fn5=Waiting for file creation...
 CxdIB-=Elapsed Time
-AmC3e0=\nIf your network is slow, please download or install Python 3.10+ manually
+AmC3ey=If your network is slow, please download or install Python 3.10+ manually
 C3TQx_=[{}] Download complete! File size: {}
 DJ9mym=[{}] Download failed
 # ◆=install_py_standalone
 Cr3-oJ=Downloading Python {} standalone...
 DnuwZu=Installing Python to {}...
 B62oO-=Extraction and installation failed
+DfZCnc=Python {} installation failed: {} does not exist or is not executable
+D6gi9n=Python {} installation completed
 # ◆=install_py_venv
 Djzzvr=Virtual environment {} already exists. Delete and reinstall it?
 C_9sLZ=Current pip mirror:
 BJVBQG={}Reinstall pip and the required Python libraries?
 AoE5L8=Skipping virtual environment creation
 6bcebee3496f45cc552aa606f8112a2d=Deleting virtual environment {}...
-D6gi9n=Python {} installation completed
-DfZCnc=Python {} installation failed: {} does not exist or is not executable
 96f72e8313838714d9e659fde4fd343c=Creating virtual environment {}...
 DC8V8Z=Virtual environment created successfully
 DqRJ9Y=Failed to create virtual environment
@@ -315,9 +321,11 @@ D4k_4H=The static IP address cannot be the same as the gateway
 A2bCmM=\nOperation cancelled
 # ◆=fix_ip
 B41yVK={} Cloud servers do not require a static IP
-AJrUNk=A static IP is already configured on the server. Would you like to adjust it?
-CbxkLM=Detected that the server is using a dynamic IP. Would you like to change it to a static IP?
-DvWz9u=Detected that the server might be using a static IP. Would you like to adjust it?
+CUbVDO=您的服务器已配置动态IP
+DZCcU2=您的服务器已配置静态IP
+C8pJIk=您的服务器可能已配置动态IP
+ABQQaM=您的服务器可能已配置静态IP
+CCY-S1=Would you like to adjust it?
 B657zX=User chose not to modify the network configuration
 
 # ■=python/system.py
