--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -130,6 +130,10 @@ CbKEUc=network-scripts 正在运行 (systemctl status network)
 DUEmDt=systemd-networkd 正在运行 (systemctl status systemd-networkd)
 AVcfZk=未知网络管理器，无法配置静态IP
 
+# ■=lib/python_bridge.sh
+# ◆=sh_clear_cache
+BSEB2I=python 执行文件 {} 不存在
+
 # ■=lib/python_install.sh
 # ◆=detect_system
 AM9k6I=不支持的架构: {}
@@ -139,6 +143,8 @@ BlWk8P=不支持的系统类型: {}
 DAV8e8=检测到中断，正在终止后台下载进程 (PID={}...)
 # ◆=smart_geturl
 CcZPFX=用法 smart_geturl <输出文件> <URL>
+D6WY5X=网络资源
+Bgl2oO=输出路径
 B1HWyp=文件大小
 CKMRMM=开始时间
 CxZTTU=系统未安装 wget 或 curl，无法下载
@@ -146,21 +152,21 @@ AOGJnE=大小
 DnoT0H=平均
 Dj_fn5=等待文件创建...
 CxdIB-=运行时间
-AmC3e0=\n如您网速较慢，请手动下载或安装 Python 3.10 及以上版本
+AmC3ey=如您网速较慢，请手动下载或安装 Python 3.10 及以上版本
 C3TQx_=[{}] 下载完成! 文件大小: {}
 DJ9mym=[{}] 下载失败
 # ◆=install_py_standalone
 Cr3-oJ=下载 Python {} standalone...
 DnuwZu=安装 Python 到 {}...
 B62oO-=解压安装失败
+DfZCnc=Python {} 安装失败: {} 不存在或不可执行
+D6gi9n=Python {} 安装完成
 # ◆=install_py_venv
 Djzzvr=虚拟环境 {} 已存在，是否删除重建?
 C_9sLZ=当前pip镜像:
 BJVBQG={}是否重建 pip 和所需 python 库?
 AoE5L8=跳过虚拟环境创建
 6bcebee3496f45cc552aa606f8112a2d=删除虚拟环境 {}...
-D6gi9n=Python {} 安装完成
-DfZCnc=Python {} 安装失败: {} 不存在或不可执行
 96f72e8313838714d9e659fde4fd343c=创建虚拟环境 {}...
 DC8V8Z=虚拟环境创建成功
 DqRJ9Y=虚拟环境创建失败
@@ -315,9 +321,11 @@ D4k_4H=输入的静态IP地址不能与网关相同
 A2bCmM=\n操作已取消
 # ◆=fix_ip
 B41yVK={} 云服务器无需设置固定IP
-AJrUNk=检测到服务器已配置静态IP，是否调整IP？
-CbxkLM=检测到服务器使用动态IP，是否改为静态IP？
-DvWz9u=检测到服务器可能使用静态IP，是否调整IP？
+CUbVDO=您的服务器已配置动态IP
+DZCcU2=您的服务器已配置静态IP
+C8pJIk=您的服务器可能已配置动态IP
+ABQQaM=您的服务器可能已配置静态IP
+CCY-S1=是否需要调整IP?
 B657zX=用户选择不修改网络配置
 
 # ■=python/system.py
