--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -318,12 +318,12 @@ D4k_4H=The static IP address cannot be the same as the gateway
 A2bCmM=\nOperation cancelled
 # ◆=fix_ip
 B41yVK={} Cloud servers do not require a static IP
-CUbVDO=您的服务器已配置动态IP
-DZCcU2=您的服务器已配置静态IP
-C8pJIk=您的服务器可能已配置动态IP
-ABQQaM=您的服务器可能已配置静态IP
+Cp93zR=Server is configured with a dynamic IP
+CYYp0S=Server is configured with a static IP
+AzA-3k=Server may be configured with a dynamic IP
+D6UA5B=Server may be configured with a static IP
 CCY-S1=Would you like to adjust it?
-B657zX=User chose not to modify the network configuration
+C2TtcR=Do not modify the network configuration
 
 # ■=python/system.py
 # ◆=confirm_action
