--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -318,12 +318,12 @@ D4k_4H=输入的静态IP地址不能与网关相同
 A2bCmM=\n操作已取消
 # ◆=fix_ip
 B41yVK={} 云服务器无需设置固定IP
-CUbVDO=您的服务器已配置动态IP
-DZCcU2=您的服务器已配置静态IP
-C8pJIk=您的服务器可能已配置动态IP
-ABQQaM=您的服务器可能已配置静态IP
+Cp93zR=服务器已配置动态IP
+CYYp0S=服务器已配置静态IP
+AzA-3k=服务器可能已配置动态IP
+D6UA5B=服务器可能已配置静态IP
 CCY-S1=是否需要调整IP?
-B657zX=用户选择不修改网络配置
+C2TtcR=不修改网络配置
 
 # ■=python/system.py
 # ◆=confirm_action
